#
# $Id$
#

AC_REVISION($Revision$)
AC_INIT([tileqt],[0.3])
AC_CONFIG_AUX_DIR(tclconfig)

AC_PROG_CXX

# KDE/QT stuff
AC_PATH_QT

# Tcl stuff:
TEA_INIT([3.1])
TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG
TEA_PATH_TKCONFIG
TEA_LOAD_TKCONFIG
TEA_PUBLIC_TCL_HEADERS
TEA_PUBLIC_TK_HEADERS

TEA_PREFIX
TEA_SETUP_COMPILER

TEA_ENABLE_THREADS
TEA_ENABLE_SHARED
TEA_ENABLE_SYMBOLS
TEA_CONFIG_CFLAGS
TEA_PATH_X

TEA_ADD_SOURCES([])
TEA_ADD_INCLUDES([-I\"${srcdir}/generic\"])

AC_DEFINE(USE_TCL_STUBS)
AC_DEFINE(USE_TK_STUBS)

TEA_MAKE_LIB

TEA_PROG_TCLSH
TEA_PROG_WISH

AC_SUBST(CLEANFILES,[])

AC_CONFIG_FILES([Makefile pkgIndex.tcl])
AC_OUTPUT

